--- a/shop.html
+++ b/shop.html
@@ -685,37 +685,37 @@ body {
         <li class="flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <span class="text-yellow-500 text-xl">⭐</span>
-                <span>zaq123</span>
+                <span>zaq123456</span>
             </div>
-            <span class="font-bold text-gray-700">1.000.000đ</span>
+            <span class="font-bold text-gray-700">6.000.000đ</span>
         </li>
         <li class="flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <span class="text-yellow-500 text-xl">⭐</span>
                 <span>Xintop1</span>
             </div>
-            <span class="font-bold text-gray-700">710.000đ</span>
+            <span class="font-bold text-gray-700">4.710.000đ</span>
         </li>
         <li class="flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <span class="text-yellow-500 text-xl">⭐</span>
                 <span>Nenbdbsj</span>
             </div>
-            <span class="font-bold text-gray-700">450.000đ</span>
+            <span class="font-bold text-gray-700">4.450.000đ</span>
         </li>
         <li class="flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <span class="text-blue-500 font-bold border border-blue-500 rounded-full px-2">4</span>
                 <span>tom22102012</span>
             </div>
-            <span class="font-bold text-gray-700">300.000đ</span>
+            <span class="font-bold text-gray-700">3.200.000đ</span>
         </li>
         <li class="flex justify-between items-center">
             <div class="flex items-center space-x-2">
                 <span class="text-blue-500 font-bold border border-blue-500 rounded-full px-2">5</span>
-                <span>Tuan</span>
+                <span>Tuanvip123</span>
             </div>
-            <span class="font-bold text-gray-700">60.000đ</span>
+            <span class="font-bold text-gray-700">1.050.000đ</span>
         </li>
     </ul>
     <button id="napTienNgayBtn" class="mt-5 w-full bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition">
