--- a/shop.html
+++ b/shop.html
@@ -770,17 +770,17 @@ body {
             <p>Lượt mua: <span style="color: red">13</span></p>
         </div>
         <div class="card p-4 text-center bg-white shadow-md rounded-lg">
-            <h3 class="text-xl font-semibold mb-2">2300 Quân Huy</h3>
+            <h3 class="text-xl font-semibold mb-2">2700 Quân Huy</h3>
             <img src="https://napquanhuy.com/upload/setting/unnamed%20(1).png" class="w-24 h-24 mx-auto mb-2">
             <p class="text-gray-600 mb-2" data-price="500000">Giá: 500,000 VNĐ</p>
-            <button class="button w-full bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition" onclick="openInvoice('2100 + 200 Quân Huy', 500000)">Mua Ngay</button>
+            <button class="button w-full bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition" onclick="openInvoice('2700 Quân Huy', 500000)">Mua Ngay</button>
             <p>Lượt mua: <span style="color: red">6</span></p>
         </div>
         <div class="card p-4 text-center bg-white shadow-md rounded-lg">
-            <h3 class="text-xl font-semibold mb-2">4500 Quân Huy</h3>
+            <h3 class="text-xl font-semibold mb-2">6000 Quân Huy</h3>
             <img src="https://napquanhuy.com/upload/setting/unnamed%20(1).png" class="w-24 h-24 mx-auto mb-2">
             <p class="text-gray-600 mb-2" data-price="1000000">Giá: 1,000,000 VNĐ</p>
-            <button class="button w-full bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition" onclick="openInvoice('4200 + 400 Quân Huy', 1000000)">Mua Ngay</button>
+            <button class="button w-full bg-blue-600 text-white py-2 rounded-lg font-bold hover:bg-blue-700 transition" onclick="openInvoice('6000 Quân Huy', 1000000)">Mua Ngay</button>
             <p>Lượt mua: <span style="color: red">2</span></p>
         </div>
     </div>
