--- a/baitapnhom.html
+++ b/baitapnhom.html
@@ -109,7 +109,7 @@
     </script>
 
     <div class="video-container">
-        <video id="video" src="ThienNguyen.mp4" controls></video>
+        <video id="video" src="https://drive.google.com/drive/my-drive?hl=vi" controls></video>
         <div class="controls">
             <button class="controls-btn" onclick="togglePlay()"></button>
             <button class="contsrol-btn" onclick="rewind()"></button>
