--- a/shop.html
+++ b/shop.html
@@ -943,6 +943,8 @@ body {
             <P class="">CƠ SỞ TPHCM: PHƯỜNG 7 QUẬN BÌNH THẠNH TPHCM </P>
             <P class="">CƠ SỞ HÀ NỘI: 89 P.LƯƠNG ĐỊNH CỦA QUẬN ĐỐNG ĐA, HÀ NỘI</P>
             <P class="">TRỤ SỞ CHÍNH: CANCAHORAO, MASBATE, PHILIPPINES</P>
+                                <img src="Logo.png">
+
         </div>
     <script>
 document.addEventListener("DOMContentLoaded", function () {
