--- a/shop.html
+++ b/shop.html
@@ -624,7 +624,7 @@ body {
 <header class="fixed-header">
     <div class="container mx-auto px-4 py-4 flex justify-between items-center">
         <div class="text-2xl font-bold text-blue-500 glow-text logo">QUANHUYLAU.ONLINE</div>
-        
+
         <!-- Nút hamburger cho mobile -->
         <button id="mobile-menu-btn" class="text-gray-700 hover:text-blue-500 lg:hidden">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -638,6 +638,7 @@ body {
             <a href="#huong-dan" class="text-gray-700 hover:text-blue-500" id="thongbao">Thông báo</a>
             <a href="#nap-tien" class="text-gray-700 hover:text-blue-500">Nạp Tiền</a>
             <a href="#rut-tien" id="rut-tien-link" class="text-gray-700 hover:text-blue-500">Rút Tiền</a>
+            <a href="https://www.facebook.com/profile.php?id=61573858710489" target="_blank" id="lienlac" class="text-gray-700 hover:text-blue-500">Liên Hệ</a>
             <span id="username-display" class="text-gray-700"></span>
             <button id="logout-btn" class="text-gray-700 hover:text-blue-500" style="background: red; border-radius: 8px; padding: 5px">LogOut</button>
         </nav>
@@ -943,7 +944,7 @@ body {
             <P class="">CƠ SỞ TPHCM: PHƯỜNG 7 QUẬN BÌNH THẠNH TPHCM </P>
             <P class="">CƠ SỞ HÀ NỘI: 89 P.LƯƠNG ĐỊNH CỦA QUẬN ĐỐNG ĐA, HÀ NỘI</P>
             <P class="">TRỤ SỞ CHÍNH: CANCAHORAO, MASBATE, PHILIPPINES</P>
-                                <img src="Logo.png">
+                    <img src="Logo.png">
 
         </div>
     <script>
